[package]
name = "throttled_json_rpc"
version = "0.1.0"
authors = ["Aiden McClelland <aiden.k.mcclelland@gmail.com>"]
repository = "https://github.com/DR-BoneZ/throttled-json-rpc-rs"
homepage = "https://github.com/DR-BoneZ/throttled-json-rpc-rs"
license = "MIT"
readme = "README.md"
documentation = "http://docs.rs/throttled_json_rpc/"
description = "Throttled JSON RPC API client for Rust."
edition = "2018"


[dependencies]
tokio = { version="~0.2.9", feature = ["sync", "time"]}
reqwest = {version = "~0.10.0", features = ["json"]}
serde = { version = "~1.0.104", features = ["derive"] }
serde_json = "~1.0.44"
anyhow = "~1.0.26"
futures = "0.3.1"
log = "0.4.8"
